WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216690
REGRESSION (
r263179
): CSS checkbox no longer visible in iOS 14
https://bugs.webkit.org/show_bug.cgi?id=216690
Summary
REGRESSION (r263179): CSS checkbox no longer visible in iOS 14
Martin
Reported
2020-09-18 01:59:56 PDT
Created
attachment 409116
[details]
iOS 14 screen recording Since updating my iPad to iOS 14, the checkbox from this demo no longer works:
https://codepen.io/abottega/pen/vNzQMo/?editors=1100
The check inside the box does not appear, though it does appear to toggle. So, it's probably only a visual bug. Unfortunately, users are unable to see if the checkbox is checked or not, making it a significant visual bug.
Attachments
iOS 14 screen recording
(10.09 MB, video/mp4)
2020-09-18 01:59 PDT
,
Martin
no flags
Details
Intended behaviour, as it is in iOS 13
(2.72 MB, video/webm)
2020-09-18 02:02 PDT
,
Martin
no flags
Details
Patch
(7.99 KB, patch)
2020-11-05 09:12 PST
,
Antoine Quint
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin
Comment 1
2020-09-18 02:02:12 PDT
Created
attachment 409117
[details]
Intended behaviour, as it is in iOS 13
Radar WebKit Bug Importer
Comment 2
2020-09-18 09:40:52 PDT
<
rdar://problem/69156576
>
Alexey Proskuryakov
Comment 3
2020-09-19 11:28:00 PDT
This affects Safari 14 on macOS too.
Simon Fraser (smfr)
Comment 4
2020-09-22 15:51:16 PDT
Autosapde says
r263179
.
Antoine Quint
Comment 5
2020-10-21 08:06:34 PDT
I reduced it to this simple content: <div style="box-shadow: 0 0 0 5px"></div>
Antoine Quint
Comment 6
2020-11-05 09:12:05 PST
Created
attachment 413308
[details]
Patch
Simon Fraser (smfr)
Comment 7
2020-11-05 09:27:15 PST
Comment on
attachment 413308
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413308&action=review
> Source/WebCore/ChangeLog:14 > + within en element's clipped bounds before considering its children. Whether the
an
> LayoutTests/fast/box-shadow/hit-test-box-shadow-on-zero-height-clipping-container-2.html:55 > +result.textContent = `${pass ? "PASS" : "FAIL"}: target element class is "{hitTestElement.className}"`;
missing $
Antoine Quint
Comment 8
2020-11-05 10:36:22 PST
Committed
r269450
: <
https://trac.webkit.org/changeset/269450
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug