REGRESSION (r263179): CSS checkbox no longer visible in iOS 14 https://bugs.webkit.org/show_bug.cgi?id=216690 <rdar://problem/69156576>

Reviewed by Simon Fraser.

Source/WebCore:

We revert the changes to RenderBox::addVisualEffectOverflow() introduced in
r263179 for bug 213260.

Instead of that original change, which affected painting instead of hit-testing,
we now ensure that RenderBlock::nodeAtPoint() will check the hit-test point is
within an element's clipped bounds before considering its children. Whether the
element has a self-painting layer should have no bearing here.

Tests: fast/box-shadow/box-shadow-with-zero-height.html
       fast/box-shadow/hit-test-box-shadow-on-zero-height-clipping-container-2.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::addVisualEffectOverflow):

LayoutTests:

Add two new tests: one that identifies the particular regression introduced by r263179 where
<div style="box-shadow: 0 0 0 10px"> would render nothing at all, and another one that does
further hit-testing on clipped child of an element with height: 0 and box-shadow to set ink
overflow which was failing even after r263179.

* fast/box-shadow/box-shadow-with-zero-height-expected.html: Added.
* fast/box-shadow/box-shadow-with-zero-height.html: Added.
* fast/box-shadow/hit-test-box-shadow-on-zero-height-clipping-container-2-expected.txt: Added.
* fast/box-shadow/hit-test-box-shadow-on-zero-height-clipping-container-2.html: Added.

Canonical link: https://commits.webkit.org/231273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269450 268f45cc-cd09-0410-ab3c-d52691b4dbfc